Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-9740

Window functions: catch invalid window frame specs

    XMLWordPrintable

Details

    Description

      Window functions: catch invalid window frame specs

      The standard specifies a lot of restrictions around frame definitions. We catch
      some, check

      ERROR HY000: Unacceptable combination of window frame bound specifications
      

      in win.result, but not all. Things like

      "rows between 1.5 preceding and 'foo' following"

      are still allowed and cause assertion failures.

      Attachments

        Issue Links

          Activity

            People

              psergei Sergei Petrunia
              psergei Sergei Petrunia
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: