MDEV-9740: Window functions: catch invalid window frame specs

Catch errors in window frame definitions